# visao-computacional-python

./: .gitignore  README.md  app.py  requirements.txt
assets/: script.js  style.css
aula-01/: README.md  lenet5.ipynb  lenet5_mnist_model.pth  main.py  pyproject.toml
aula-02/: README.md  classifier_timm.ipynb  collect_landmarks.py  gemini_vision.ipynb  label_encoder.joblib  pyproject.toml  segmentation_clipseg.ipynb  train_model.py  webcam_recog.py
aula-03/: README.md  pyproject.toml  requirements.txt
aula-03/assets/: script.js
aula-03/core/: processor.py  utils.py
